--- a/mac-cam-info.plist
+++ b/mac-cam-info.plist
@@ -46,7 +46,7 @@
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2011 Apple Inc. All rights reserved.</string>
 	<key>NSMainNibFile</key>
-	<string>MainMenu</string>
+	<string>menu</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
 </dict>
