--- a/mac-cam-info.plist
+++ b/mac-cam-info.plist
@@ -22,7 +22,7 @@
 			<key>CFBundleTypeRole</key>
 			<string>Editor</string>
 			<key>NSDocumentClass</key>
-			<string>AVRecorderDocument</string>
+			<string>AVCaptureDocument</string>
 		</dict>
 	</array>
 	<key>CFBundleExecutable</key>
